--- a/tpl/_attachments.html
+++ b/tpl/_attachments.html
@@ -1,18 +1,16 @@
 <tpl:Attachments>
-	<tpl:AttachmentsHeader>
-		<div id="annexes" class="attachment">
-			<h3>Annexes</h3>
-
-			<ol>
-	</tpl:AttachmentsHeader>
-		<li class="{{tpl:AttachmentType}}">
-			<tpl:AttachmentIf>
-				<a href="{{tpl:AttachmentURL}}"
-				 title="{{tpl:AttachmentFileName}} ({{tpl:AttachmentSize}})" class="attached-file">{{tpl:AttachmentTitle}}</a>
-			</tpl:AttachmentIf>
-		</li>
-	<tpl:AttachmentsFooter>
-			</ol>
-		</div>
-	</tpl:AttachmentsFooter>
+  <tpl:AttachmentsHeader>
+    <div id="annexes" class="attachment">
+      <h3>Annexes</h3>
+      <ol>
+  </tpl:AttachmentsHeader>
+        <li class="{{tpl:AttachmentType}}">
+          <tpl:AttachmentIf>
+            <a href="{{tpl:AttachmentURL}}" title="{{tpl:AttachmentFileName}} ({{tpl:AttachmentSize}})" class="attached-file">{{tpl:AttachmentTitle}}</a>
+          </tpl:AttachmentIf>
+        </li>
+    <tpl:AttachmentsFooter>
+      </ol>
+    </div>
+  </tpl:AttachmentsFooter>
 </tpl:Attachments>
