Mise à jour des pages d’archives

--- a/tpl/search.html
+++ b/tpl/search.html
@@ -24,7 +24,7 @@
   </tpl:SysIf>
 
   <tpl:Entries>
-    {{tpl:include src="_entry-excerpt.html"}}
+    {{tpl:include src="_entry-loop.html"}}
 
     <tpl:EntriesFooter>
       {{tpl:include src="_pagination.html"}}
