--- a/tpl/archive_month.html
+++ b/tpl/archive_month.html
@@ -26,7 +26,7 @@
   </div>
 
   <tpl:Entries>
-    {{tpl:include src="_entry-excerpt.html"}}
+    {{tpl:include src="_entry-loop.html"}}
 
     <tpl:EntriesFooter>
       {{tpl:include src="_pagination.html"}}
