--- a/tpl/category.html
+++ b/tpl/category.html
@@ -9,13 +9,14 @@
 </tpl:Block>
 
 <tpl:Block name="main-content">
-  <div id="content-info">
+  <div class="content-info">
     <h1 class="content-title">{{tpl:CategoryTitle}}</h1>
 
     {{tpl:CategoryDescription}}
   </div>
+
   <tpl:Entries>
-    {{tpl:include src="_entry-excerpt.html"}}
+    {{tpl:include src="_entry-loop.html"}}
 
     <tpl:EntriesFooter>
       {{tpl:include src="_pagination.html"}}
