Remplacement du texte de pied de page par la fonction idoine

--- a/tpl/_footer.html
+++ b/tpl/_footer.html
@@ -1,6 +1,6 @@
 <footer id="site-footer">
   <div id="copyright">
-    Propulsé par <a href="https://fr.dotclear.org/">Dotclear</a>
+    {{tpl:SysPoweredBy}}
   </div>
 
   {{tpl:SysBehavior behavior="publicFooterContent"}}
