--- a/tpl/category.html
+++ b/tpl/category.html
@@ -9,11 +9,11 @@
 </tpl:Block>
 
 <tpl:Block name="main-content">
-  <div class="content-info">
+  <header class="content-info">
     <h1 class="content-title">{{tpl:CategoryTitle}}</h1>
 
     {{tpl:CategoryDescription}}
-  </div>
+  </header>
 
   <tpl:Entries>
     {{tpl:include src="_entry-loop.html"}}
