--- a/tpl/tags.html
+++ b/tpl/tags.html
@@ -7,9 +7,9 @@
 <tpl:Block name="head-description"></tpl:Block>
 
 <tpl:Block name="main-content">
-  <div id="content-info">
+  <header class="content-info">
     <h1 class="content-title">Mots-clés</h1>
-  </div>
+  </header>
 
   <ul class="tags">
     <tpl:Tags>
