Ajout d’un permalien pour les commentaires

--- a/tpl/_comments.html
+++ b/tpl/_comments.html
@@ -25,7 +25,7 @@
               <cite class="comment-author">{{tpl:CommentAuthorLink}} (ping)</cite>,
             </tpl:CommentIf>
 
-            le {{tpl:CommentDate}} à {{tpl:CommentTime}}&nbsp;:
+            le <a href="#commentaire-{{tpl:CommentID}}">{{tpl:CommentDate}} à {{tpl:CommentTime}}</a>&nbsp;:
           </header>
 
           <div class="comment-content<tpl:CommentIf is_ping="1"> ping-content</tpl:CommentIf>">
