--- a/tpl/_attachments.html
+++ b/tpl/_attachments.html
@@ -1,12 +1,12 @@
 <tpl:Attachments>
   <tpl:AttachmentsHeader>
-    <div id="annexes" class="attachment">
+    <div id="annexes" class="attachments">
       <h3>Annexes</h3>
       <ol>
   </tpl:AttachmentsHeader>
         <li class="{{tpl:AttachmentType}}">
           <tpl:AttachmentIf>
-            <a href="{{tpl:AttachmentURL}}" title="{{tpl:AttachmentFileName}} ({{tpl:AttachmentSize}})" class="attached-file">{{tpl:AttachmentTitle}}</a>
+            <a href="{{tpl:AttachmentURL}}">{{tpl:AttachmentTitle}}</a>
           </tpl:AttachmentIf>
         </li>
     <tpl:AttachmentsFooter>
