Ajout d’un lien RSS dans l’en-tête et le pied de page + recherche

--- a/tpl/__layout.html
+++ b/tpl/__layout.html
@@ -17,6 +17,7 @@
     </tpl:Block>
 
     <link rel="stylesheet" type="text/css" href="{{tpl:BlogThemeURL}}/style.min.css" />
+    <link rel="alternate" type="application/atom+xml" title="RSS" href="{{tpl:BlogFeedURL}}" />
 
     {{tpl:SysBehavior behavior="publicHeadContent"}}
   </head>
