--- a/tpl/tag.html
+++ b/tpl/tag.html
@@ -12,7 +12,7 @@
   <header class="content-info">
     <h1 class="content-title">Mot-clé&nbsp;: {{tpl:TagID}}</h1>
 
-    <p class="content-description">Liste des notes associées à ce mot-clé&nbsp;:</p>
+    <p class="content-description content">Liste des notes associées à ce mot-clé&nbsp;:</p>
   </header>
 
   <tpl:Entries>
