--- a/tpl/404.html
+++ b/tpl/404.html
@@ -1,17 +1,17 @@
 {{tpl:extends parent="__layout.html"}}
 
 <tpl:Block name="head-title">
-  <title>Page non trouvée – {{tpl:BlogName encode_html="1"}}</title>
+  <title>Page sans contenu – {{tpl:BlogName encode_html="1"}}</title>
 </tpl:Block>
 
 <tpl:Block name="head-description">
-  <meta name="description" lang="{{tpl:BlogLanguage}}" content="Il n’y a rien à afficher">
+  <meta name="description" content="Il n’y a rien à afficher">
 </tpl:Block>
 
 <tpl:Block name="main-content">
   <div id="content-info">
-    <h1 class="content-title">Erreur</h1>
-  </div>
+    <h1 class="content-title">Aucun contenu</h1>
 
-  <p>Il n’y a rien ici.</p>
+    <p class="content">Il n’y a rien à afficher.</p>
+  </div>
 </tpl:Block>
