Ajout d’un lien vers les archives dans le pied de page

--- a/tpl/__layout.html
+++ b/tpl/__layout.html
@@ -38,7 +38,7 @@
 
       <main id="site-content">
         <tpl:Block name="main-content">
-          <tpl:Entries>
+          <tpl:Entries no_content="0">
             {{tpl:include src="_entry-loop.html"}}
 
             <tpl:EntriesFooter>
