Mise à jour du pied de page

--- a/tpl/_footer.html
+++ b/tpl/_footer.html
@@ -6,7 +6,7 @@
   </div>
 
   <div class="site-footer-line">
-    {{tpl:SysPoweredBy}} &ndash; <a href="{{tpl:BlogFeedURL}}">RSS</a> &ndash; <a href="{{tpl:BlogArchiveURL}}">Archives</a>
+    {{tpl:SysPoweredBy}} &ndash; <a href="{{tpl:BlogFeedURL}}" rel="alternate">RSS</a> &ndash; <a href="{{tpl:BlogArchiveURL}}">Archives</a>
   </div>
 
   {{tpl:SysBehavior behavior="publicFooterContent"}}
