Ajoute une étiquette aux pages de catégorie et de mot-clé

--- a/tpl/category.html
+++ b/tpl/category.html
@@ -10,6 +10,8 @@
 
 <tpl:Block name="main-content">
   <header class="content-info">
+    <span class="content-label">catégorie</span>
+
     <h1 class="content-title">{{tpl:CategoryTitle}}</h1>
 
     {{tpl:CategoryDescription}}
