--- a/tpl/tag.html
+++ b/tpl/tag.html
@@ -10,9 +10,9 @@
 
 <tpl:Block name="main-content">
   <header class="content-info">
-    <h1 class="content-title">Mot-clé&nbsp;: {{tpl:TagID}}</h1>
+    <span class="content-label">mot-clé</span>
 
-    <p class="content-description content">Liste des notes associées à ce mot-clé&nbsp;:</p>
+    <h1 class="content-title">{{tpl:TagID}}</h1>
   </header>
 
   <tpl:Entries>
