--- a/tpl/_footer.html
+++ b/tpl/_footer.html
@@ -1,6 +1,6 @@
 <footer id="site-footer">
   <div class="site-footer-line">
-    <a href="{{tpl:BlogFeedURL}}" rel="alternate">RSS</a> &ndash; <a href="{{tpl:BlogArchiveURL}}">Archives</a> &ndash; {{tpl:SysPoweredBy}}
+    <a href="{{tpl:BlogArchiveURL}}">Archives</a> &ndash; <a href="{{tpl:BlogFeedURL}}" rel="alternate">RSS</a> &ndash; {{tpl:SysPoweredBy}}
   </div>
 
   {{tpl:SysBehavior behavior="publicFooterContent"}}
