--- a/tpl/404.html
+++ b/tpl/404.html
@@ -12,6 +12,6 @@
   <div id="content-info">
     <h1 class="content-title">Aucun contenu</h1>
 
-    <p class="content">Il n’y a rien à afficher.</p>
+    {{tpl:include src="_entry-empty.html"}}
   </div>
 </tpl:Block>
