--- a/tpl/__layout.html
+++ b/tpl/__layout.html
@@ -2,7 +2,7 @@
 <html lang="{{tpl:BlogLanguage}}">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <tpl:Block name="head-title">
       <title>{{tpl:BlogName encode_html="1"}}<tpl:PaginationIf start="0"> – page {{tpl:PaginationCurrent}}</tpl:PaginationIf></title>
