Localisation du lien vers Dotclear dans le pied de page

--- a/tpl/_footer.html
+++ b/tpl/_footer.html
@@ -1,6 +1,10 @@
 <footer id="site-footer">
   <div class="site-footer-line">
-    <a href="{{tpl:BlogArchiveURL}}">Archives</a> &ndash; <a href="{{tpl:BlogFeedURL}}" rel="alternate">RSS</a> &ndash; {{tpl:SysPoweredBy}}
+    <a href="{{tpl:BlogArchiveURL}}">Archives</a> &ndash; <a href="{{tpl:BlogFeedURL}}" rel="alternate">RSS</a>
+  </div>
+
+  <div class="site-footer-line">
+    Propulsé par <a href="https://fr.dotclear.org/">Dotclear</a> et <a href="https://github.com/te2dy/origine/">Origine</a>
   </div>
 
   {{tpl:SysBehavior behavior="publicFooterContent"}}
