--- a/tpl/_footer.html
+++ b/tpl/_footer.html
@@ -1,9 +1,9 @@
 <footer id="site-footer">
-  <div class="site-footer-line">
+  <div class="site-footer-line" id="site-footer-menu">
     <a href="{{tpl:BlogArchiveURL}}">Archives</a> &ndash; <a href="{{tpl:BlogFeedURL}}" rel="alternate">RSS</a>
   </div>
 
-  <div class="site-footer-line">
+  <div class="site-footer-line" id="site-footer-ad">
     Propulsé par <a href="https://fr.dotclear.org/">Dotclear</a> et <a href="https://github.com/te2dy/origine/">Origine</a>
   </div>
 
