--- a/tpl/search.html
+++ b/tpl/search.html
@@ -8,17 +8,19 @@
 
 <tpl:Block name="main-content">
   <div id="content-info">
-    <form action="{{tpl:BlogURL}}" id="page-search-form" method="get" role="search">
-      <div class="form-entry">
-        <input aria-label="Recherche" class="page-search-form-input" maxlength="255" name="q" placeholder="Les termes de votre recherche" type="text" value="{{tpl:SysSearchString}}" />
-      </div>
+    <h1 class="content-title">Recherche</h1>
 
-      <div class="form-entry">
-        <input type="submit" value="Rechercher" />
-      </div>
-    </form>
+    <section class="page-content content">
+      <form action="{{tpl:BlogURL}}" id="page-search-form" method="get" role="search">
+        <div class="form-entry">
+          <input aria-label="Recherche" class="page-search-form-input" maxlength="255" name="q" placeholder="Les termes de votre recherche" type="text" value="{{tpl:SysSearchString}}" />
+        </div>
 
-    <h1 class="content-title">Recherche de «&nbsp;{{tpl:SysSearchString}}&nbsp;»</h1>
+        <div class="form-entry">
+          <input type="submit" value="Rechercher" />
+        </div>
+      </form>
+    </section>
 
     <tpl:SysIf search_count="==1">
       <p>{{tpl:SysSearchString encode_html="1" string="Votre recherche a retourné <strong>un resultat</strong>&nbsp;:"}}</p>
