Correction d’un style qui ne se chargeait pas sur les recherches

--- a/tpl/search.html
+++ b/tpl/search.html
@@ -7,7 +7,7 @@
 <tpl:Block name="head-description"></tpl:Block>
 
 <tpl:Block name="main-content">
-  <div id="content-info">
+  <div class="content-info">
     <h1 class="content-title">Recherche</h1>
 
     <section class="page-content content">
