Supprime le lien du titre du site sur la première page de l’accueil

--- a/tpl/home.html
+++ b/tpl/home.html
@@ -9,7 +9,13 @@
 </tpl:Block>
 
 <tpl:Block name="site-header">
-  <h1 id="site-title"><a href="{{tpl:BlogURL}}">{{tpl:BlogName}}</a></h1>
+  <tpl:PaginationIf end="0">
+    <h1 id="site-title">{{tpl:BlogName}}</h1>
+  </tpl:PaginationIf>
+
+  <tpl:PaginationIf start="0">
+    <h1 id="site-title"><a href="{{tpl:BlogURL}}">{{tpl:BlogName}}</a></h1>
+  </tpl:PaginationIf>
 
   <h2 id="site-description">{{tpl:BlogDescription}}</h2>
 
