--- a/tpl/category.html
+++ b/tpl/category.html
@@ -10,7 +10,7 @@
 
 <tpl:Block name="main-content">
   <header class="content-info">
-    <span class="content-label">catégorie</span>
+    <span class="content-label">{{tpl:lang category}}</span>
 
     <h1 class="content-title">{{tpl:CategoryTitle}}</h1>
 
