--- a/tpl/home.html
+++ b/tpl/home.html
@@ -1,11 +1,11 @@
 {{tpl:extends parent="__layout.html"}}
 
 <tpl:Block name="head-title">
-  <title>{{tpl:BlogName encode_html="1"}}<tpl:PaginationIf start="0"> – page {{tpl:PaginationCurrent}}</tpl:PaginationIf></title>
+  <title>{{tpl:BlogName encode_html="1"}}<tpl:PaginationIf start="0"> – {{tpl:lang page}} {{tpl:PaginationCurrent}}</tpl:PaginationIf></title>
 </tpl:Block>
 
 <tpl:Block name="head-description">
-  <meta name="description" lang="{{tpl:BlogLanguage}}" content="{{tpl:BlogDescription}}<tpl:PaginationIf start="0">  - page {{tpl:PaginationCurrent}}</tpl:PaginationIf>">
+  <meta name="description" lang="{{tpl:BlogLanguage}}" content="{{tpl:BlogDescription}}<tpl:PaginationIf start="0">  - {{tpl:lang page}} {{tpl:PaginationCurrent}}</tpl:PaginationIf>">
 </tpl:Block>
 
 <tpl:Block name="site-header">
