--- a/tpl/__layout.html
+++ b/tpl/__layout.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <tpl:Block name="head-title">
-      <title>{{tpl:BlogName encode_html="1"}}<tpl:PaginationIf start="0"> – page {{tpl:PaginationCurrent}}</tpl:PaginationIf></title>
+      <title>{{tpl:BlogName encode_html="1"}}<tpl:PaginationIf start="0"> – {{tpl:lang page}} {{tpl:PaginationCurrent}}</tpl:PaginationIf></title>
     </tpl:Block>
 
     <tpl:Block name="head-description">
-      <meta name="description" content="{{tpl:BlogDescription remove_html="1" encode_html="1"}}<tpl:PaginationIf start="0"> - page {{tpl:PaginationCurrent}}</tpl:PaginationIf>" />
+      <meta name="description" content="{{tpl:BlogDescription remove_html="1" encode_html="1"}}<tpl:PaginationIf start="0"> - {{tpl:lang page}} {{tpl:PaginationCurrent}}</tpl:PaginationIf>" />
     </tpl:Block>
 
     <tpl:Block name="head-meta">
