Ajout de traductions manquantes

--- a/tpl/search.html
+++ b/tpl/search.html
@@ -23,7 +23,7 @@
     </section>
 
     <tpl:SysIf search_count="==1">
-      <p>{{tpl:SysSearchString encode_html="1" string="{{Your search returned <strong>one result</strong>:"}}</p>
+      <p>{{tpl:SysSearchString encode_html="1" string="Your search returned <strong>one result</strong>:"}}</p>
     </tpl:SysIf>
 
     <tpl:SysIf search_count="&gt;1">
