Corrige un oubli de traduction

--- a/tpl/_comments.html
+++ b/tpl/_comments.html
@@ -18,7 +18,7 @@
       </tpl:CommentIf>
           <header class="comment-meta">
             <tpl:CommentIf is_ping="0">
-              <cite class="comment-author">{{tpl:CommentAuthorLink}}</cite>, <a href="#comment-{{tpl:CommentID}}">{{tpl:CommentDate}} {{tpl:lang at}} {{tpl:CommentTime}}</a>{{tpl:lang :}}
+              <cite class="comment-author">{{tpl:CommentAuthorLink}}</cite>, <a href="#{{tpl:lang comment}}-{{tpl:CommentID}}">{{tpl:CommentDate}} {{tpl:lang at}} {{tpl:CommentTime}}</a>{{tpl:lang :}}
             </tpl:CommentIf>
 
             <tpl:CommentIf is_ping="1">
