Modification d’une chaîne de texte

--- a/tpl/_comments.html
+++ b/tpl/_comments.html
@@ -95,7 +95,7 @@
         </div>
 
         <div class="form-entry">
-          <label for="c_site">{{tpl:lang URL of your personal account or website (optional)}}</label>
+          <label for="c_site">{{tpl:lang URL of a personal account or website (optional)}}</label>
           <input name="c_site" id="c_site" type="text" size="30" maxlength="255"
            placeholder="https://…" value="{{tpl:CommentPreviewSite encode_html="1"}}">
         </div>
