Suppression des liens Archives et RSS remplacés par un emplacement de widgets

--- a/tpl/_footer.html
+++ b/tpl/_footer.html
@@ -1,6 +1,6 @@
 <footer id="site-footer">
   <div class="site-footer-line" id="site-footer-menu">
-    <a href="{{tpl:BlogArchiveURL}}">{{tpl:lang Archives}}</a> &ndash; <a href="{{tpl:BlogFeedURL}}" rel="alternate">{{tpl:lang RSS}}</a>
+    {{tpl:Widgets type="custom"}}
   </div>
 
   <div class="site-footer-line" id="site-footer-ad">
