--- a/tpl/_attachments.html
+++ b/tpl/_attachments.html
@@ -1,6 +1,6 @@
 <tpl:Attachments>
   <tpl:AttachmentsHeader>
-    <div id="annexes" class="attachments">
+    <div id="annexes" class="attachments content">
       <h3>Annexes</h3>
       <ol>
   </tpl:AttachmentsHeader>
