--- a/tpl/category.html
+++ b/tpl/category.html
@@ -18,7 +18,7 @@
   </header>
 
   <tpl:Entries>
-    {{tpl:include src="_entry-loop.html"}}
+    {{tpl:include src="_entry-list.html"}}
 
     <tpl:EntriesFooter>
       {{tpl:include src="_pagination.html"}}
