Ajout d’un "slash" pour fermer certaines balises meta dans l’en-tête

--- a/tpl/archive_month.html
+++ b/tpl/archive_month.html
@@ -5,7 +5,7 @@
 </tpl:Block>
 
 <tpl:Block name="head-description">
-  <meta name="description" lang="{{tpl:BlogLanguage}}" content="{{tpl:lang Archives sorted by month}}">
+  <meta name="description" lang="{{tpl:BlogLanguage}}" content="{{tpl:lang Archives sorted by month}}" />
 </tpl:Block>
 
 <tpl:Block name="main-content">
