--- a/tpl/tag.html
+++ b/tpl/tag.html
@@ -5,7 +5,7 @@
 </tpl:Block>
 
 <tpl:Block name="head-description">
-  <meta name="description" lang="{{tpl:EntryLang}}" content="{{tpl:lang Posts related to the tag}} {{tpl:TagID encode_html="1"}}">
+  <meta name="description" lang="{{tpl:EntryLang}}" content="{{tpl:lang Posts related to the tag}} {{tpl:TagID encode_html="1"}}" />
 </tpl:Block>
 
 <tpl:Block name="main-content">
