--- a/tpl/404.html
+++ b/tpl/404.html
@@ -5,7 +5,7 @@
 </tpl:Block>
 
 <tpl:Block name="head-description">
-  <meta name="description" content="{{tpl:lang There is nothing to display}}">
+  <meta name="description" content="{{tpl:lang There is nothing to display}}" />
 </tpl:Block>
 
 <tpl:Block name="main-content">
