--- a/tpl/password-form.html
+++ b/tpl/password-form.html
@@ -6,7 +6,7 @@
 
 <tpl:Block name="head-description">
   <tpl:EntryIf extended="1">
-    <meta name="description" lang="{{tpl:EntryLang}}" content="{{tpl:EntryExcerpt encode_html="1" remove_html="1"}}">
+    <meta name="description" lang="{{tpl:EntryLang}}" content="{{tpl:EntryExcerpt encode_html="1" remove_html="1"}}" />
   </tpl:EntryIf>
 
   <tpl:EntryIf extended="0">
